fix(text-input): remove border radius on iOS - INNO-1904

--- a/src/systems/ec/implementations/vanilla/packages/ec-component-form-file-upload/ec-component-form-file-upload.scss
+++ b/src/systems/ec/implementations/vanilla/packages/ec-component-form-file-upload/ec-component-form-file-upload.scss
@@ -10,6 +10,7 @@
   appearance: none;
   background: none;
   background-color: $ecl-color-blue-100;
+  border-radius: 0;
   border-width: 0;
   box-sizing: border-box;
   color: $ecl-color-white-100;
