--- a/src/systems/ec/implementations/vanilla/packages/ec-component-form-text-area/ec-component-form-text-area.scss
+++ b/src/systems/ec/implementations/vanilla/packages/ec-component-form-text-area/ec-component-form-text-area.scss
@@ -15,6 +15,7 @@
   $padding-horizontal: $ecl-spacing-s
 ) {
   .ecl-text-area {
+    appearance: none;
     background-color: $ecl-color-white-100;
     border: $border-width solid $border-color;
     border-radius: 0;
